fix broken path on IE

--- a/src/css/modules/_pollchart.scss
+++ b/src/css/modules/_pollchart.scss
@@ -59,11 +59,11 @@
 
   .pollster {
     stroke-width: 1;
-    opacity: 0.15;
+    fill-opacity: 0.15;
   }
 
   .pollster:hover {
-    opacity: 1; 
+    fill-opacity: 1; 
   }
   .pollster path {
     stroke: black;
